Digital/objects/Placement_Content_Detail_History__c.object
<CustomObject>
    <label>Placement Content Detail History</label>
    <nameField>
        <label>Placement Content Details Mockup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Content Detail History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Asset_Path_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset Path Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Path__c</fullName>
        <label>Asset Path</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Comments_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comments Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copy_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy__c</fullName>
        <label>Copy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Link_Text_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Link Text Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_Text__c</fullName>
        <label>URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Placement_Content_Detail__c</fullName>
        <label>Placement Content Detail</label>
        <referenceTo>Placement_Content_Detail__c</referenceTo>
        <relationshipLabel>Placement Content Detail History</relationshipLabel>
        <relationshipName>Placement_Content_Detail_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Slides_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Slides Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Slides__c</fullName>
        <label>Slides</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Slide 1</fullName>
                </value>
                <value>
                    <fullName>Slide 2</fullName>
                </value>
                <value>
                    <fullName>Slide 3</fullName>
                </value>
                <value>
                    <fullName>Slide 4</fullName>
                </value>
                <value>
                    <fullName>Slide 5</fullName>
                </value>
                <value>
                    <fullName>Slide 6</fullName>
                </value>
                <value>
                    <fullName>Slide 7</fullName>
                </value>
                <value>
                    <fullName>Slide 8</fullName>
                </value>
                <value>
                    <fullName>Slide 9</fullName>
                </value>
                <value>
                    <fullName>Slide 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub Type Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Dynamic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>